--- a/index.html
+++ b/index.html
@@ -24,10 +24,8 @@
         <div class="row" >
           <div class="col" id="nav-bar">
             <ul>
-              <ul>Home</ul>
-              <ul>History</ul>
-              <ul>Resume</ul>
-              <ul>Contact Information</ul>
+              <ul><link rel="stylesheet" href="index.html">Home</ul>
+              <ul><link rel="stylesheet" href="Portfolio.html">Portfolio</ul>
             </ul>
           </div>
         </div>
