--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
 
 <div id="app" class="container">
 
+  <h1>Welcome to My Website</h1>
+  <p> I have lived in Beaver City, Nebraska for 15 years of my life. I attended Southern Valley Public Schools and graduated in 2024.</p>
+  <img id="standup-picture" src="src/assets/standup.jpeg" alt="Picture">
+  
+  
+  
+  
   <h1>My GitHub Repositories</h1>
 
   <!-- Loading State -->
